# podryk

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: cog_readme.py
src/podryk/: __init__.py
src/podryk/models/: enum.py  episode.py  field_types.py  namespaces.py  podcast.py  sub_types.py  xml_model.py
tests/: test_episode.py  test_feed.py  test_field_types.py  test_podcast.py  test_readme.py  test_sub_types.py
tests/__snapshots__/: test_episode.ambr  test_feed.ambr  test_field_types.ambr  test_podcast.ambr  test_readme.ambr  test_sub_types.ambr
tests/utils/: xml_util.py
