[project]
name = "podryk"
version = "1.1.0"
description = "A podcast feed generator"
keywords = ["podcast", "rss", "feed", "podcasting", "audio"]
readme = "README.md"
authors = [
    { name = "Julien Hadley Jack", email = "git@jlhj.de" }
]
license = "MIT"
license-files = [
    "LICENSE.txt",
]
requires-python = ">=3.13"
dependencies = [
    "content-types>=0.3.0",
    "pydantic-xml[lxml]>=2.18.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/julien-hadleyjack/podryk"
Repository = "https://github.com/julien-hadleyjack/podryk"
Issues = "https://github.com/julien-hadleyjack/podryk/issues"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
build = [
    "python-semantic-release>=10.5.3",
]
dev = [
    "cogapp>=3.6.0",
    "coverage>=7.13.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-github-report>=0.0.1",
    "ruff>=0.15.0",
    "syrupy>=5.1.0",
]

[tool.uv]
required-version = ">=0.9.6"

[tool.pytest.ini_options]
addopts = ["--snapshot-patch-pycharm-diff"]

[tool.ruff]
line-length = 120

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''docs(?:\([^)]*?\))?: .+''',
    '''build(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''project scaffold''',
]

[semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
